# showtracker

./: Cargo.toml  build.rs  rustfmt.toml
.cargo/: config.toml
src/: cli.rs  common.rs  constants.rs  main.rs  storage.rs  structs.rs
src/commands/: check.rs  common.rs  debug.rs  list.rs  mod.rs  search.rs  track.rs  untrack.rs  update.rs
src/queries/: check.sparql  shows.sparql
src/structs/: display.rs  mod.rs  tree.rs
