[package]
name = "showtracker"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
clap = "2.33.3"
home = "0.5.3"
tantivy = "0.16.1"
tempfile = "3.3.0"