[package]
name = "showtracker"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
clap = { version = "3.0.14", features = ["derive"] }
home = "0.5.3"
urlencoding = "2.1.0"
bs58 = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
comfy-table = "5.0.1"