[package]
name = "showtracker"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking"] }
clap = { version = "3.0.14", features = ["derive"] }
home = "0.5.3"
urlencoding = "2.1.0"
bs58 = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0.136", features = ["derive"] }
comfy-table = "5.0.1"
scraper = "0.12.0"
chrono = { version = "0.4.19", features = ["serde"] }
ptree = "0.4.0"

[build-dependencies]
clap = { version = "3.0.14", features = ["derive"] }
clap_mangen = "0.1.2"
sha2 = "0.10.2"
bs58 = "0.4.0"
walkdir = "2.3.2"
petname = "1.1.2"
rand = "0.8.5"
rand_chacha = "0.3.1"